--- a/blocks/popup/__field/popup__field.css
+++ b/blocks/popup/__field/popup__field.css
@@ -11,30 +11,31 @@
   color: #000;
 }
 
-.popup__field:nth-child(2) {
+.popup__field:last-of-type {
   margin-top: 30px;
 }
 
 ::-webkit-input-placeholder {
-  color: inherit;
+  color: #C4C4C4;
+  ;
   opacity: 1;
   transition: opacity 0.3s;
 }
 
 ::-moz-placeholder {
-  color: inherit;
+  color: #C4C4C4;
   opacity: 1;
   transition: opacity 0.3s;
 }
 
 :-moz-placeholder {
-  color: inherit;
+  color: #C4C4C4;
   opacity: 1;
   transition: opacity 0.3s;
 }
 
 :-ms-input-placeholder {
-  color: inherit;
+  color: #C4C4C4;
   opacity: 1;
   transition: opacity 0.3s;
 }
@@ -61,7 +62,7 @@
     height: 27px;
     margin: 75px 22px 30px 22px;
   }
-  .popup__field:nth-child(2) {
+  .popup__field:last-of-type {
     margin: 0 22px 45px 22px;
   }
 }
