--- a/pages/index.css
+++ b/pages/index.css
@@ -1,9 +1,6 @@
 @import url(../vendor/normalize.css);
 @import url(../vendor/fonts/fonts.css);
 @import url(../blocks/page/page.css);
-@import url(../blocks/button/button.css);
-
-
 @import url(../blocks/popup/popup.css);
 @import url(../blocks/popup/__container/popup__container.css);
 @import url(../blocks/popup/__title/popup__title.css);
@@ -11,7 +8,11 @@
 @import url(../blocks/popup/_opened/popup_opened.css);
 @import url(../blocks/popup/__submit-button/popup__submit-button.css);
 @import url(../blocks/popup/__close-button/popup__close-button.css);
-
+@import url(../blocks/popup/__img/popup__img.css);
+@import url(../blocks/popup/__caption/popup__caption.css);
+@import url(../blocks/popup/__figure/popup__figure.css);
+@import url(../blocks/popup/__img-container/popup__img-container.css);
+@import url(../blocks/popup/_theme/popup_theme_img.css);
 @import url(../blocks/page/__header/page__header.css);
 @import url(../blocks/page/__main/page__main.css);
 @import url(../blocks/page/__footer/page__footer.css);
@@ -20,8 +21,6 @@
 @import url(../blocks/main/main.css);
 @import url(../blocks/main/__profile/main__profile.css);
 @import url(../blocks/main/__cards/main__cards.css);
-
-
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/profile/__content/profile__content.css);
 @import url(../blocks/profile/__avatar/profile__avatar.css);
@@ -30,13 +29,13 @@
 @import url(../blocks/profile/__subtitle/profile__subtitle.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
-
 @import url(../blocks/cards/__list/cards__list.css);
 @import url(../blocks/cards/__body/cards__body.css);
 @import url(../blocks/cards/__title/cards__title.css);
 @import url(../blocks/cards/__like-button/cards__like-button.css);
 @import url(../blocks/cards/__like-button/_status/cards__like-button_status_active.css);
 @import url(../blocks/cards/__footer/cards__footer.css);
-
+@import url(../blocks/cards/__img/cards__img.css);
+@import url(../blocks/cards/__remove-button/cards__remove-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
